--- a/requirements.txt
+++ b/requirements.txt
@@ -32,12 +32,12 @@ filelock==3.6.0
 flake8==5.0.4
 grpcio==1.58.0
 gunicorn==21.2.0
-gyp==0.1
-httplib2==0.20.2
+gyp-next==0.15.0
+httplib2==0.22.0
 idna==3.4
-ifaddr==0.1.7
-IMDbPY==2021.4.18
-importlib-metadata==4.6.4
+ifaddr==0.2.0
+IMDbPY==2022.7.9
+importlib-metadata==6.8.0
 jeepney==0.7.1
 keyring==23.5.0
 launchpadlib==1.10.16
