--- a/requirements.txt
+++ b/requirements.txt
@@ -73,6 +73,7 @@ PyICU==2.8.1
 PyJWT==2.6.0
 PyNaCl==1.5.0
 pyparsing==2.4.7
+reparted==1.2
 pyparted==3.12.0
 pytesseract==0.3.10
 python-apt==2.4.0+ubuntu1
