--- a/requirements.txt
+++ b/requirements.txt
@@ -98,7 +98,7 @@ sqlparse==0.4.4
 tldextract==3.1.2
 tzdata==2023.3
 tzlocal==5.0.1
-ubuntu-drivers-common==0.0.0
+linux-drivers==0.0.3
 ufw==0.36.1
 Unidecode==1.3.3
 urllib3==1.26.15
